# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Oct 2 2025 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Compiled and released new jar files: monetdb-jdbc-12.1.jre8.jar and
  jdbcclient.jre8.jar

For a complete list of changes in previous monetdb-java releases see:
  https://www.monetdb.org/downloads/Java/archive/ChangeLog-Archive
